# asvang.no

./: .env  .gitignore  Cargo.toml  asvang.db  index.html  package-lock.json  package.json
migrations/: .env
migrations/2022-07-17-185751_create_posts/: up.sql
migrations/2022-07-17-192847_create_posts/: up.sql
migrations/2022-07-18-201130_not_null_id_on_posts/: down.sql  up.sql
posts/: fra-kode-til-pixel.html
src/: app.html  lib.rs  models.rs  schema.rs
src/components/: PostPreview.svelte
src/components/shared/: Footer.svelte  Navbar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/posts/: +page.svelte
src/routes/posts/fra-kode-til-pixel/: +page.svelte
static/css/: styles.css
