[package]
name = "asvangno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"]}
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
# rusqlite = { version = "0.28.0", features = ["bundled"] }
dotenv = "0.15.0"